--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -5,17 +5,16 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy package.json and install dependencies
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+COPY package.json package-lock.json ./
+
+RUN npm ci
 
 # Copy application code
 COPY . .
 
-# Build the application
-RUN yarn build
 
 # Expose port
 EXPOSE 3000
 
 # Command to run the application
-CMD ["yarn", "start"]
+CMD ["npm", "start"]
